--- a/index.html
+++ b/index.html
@@ -366,8 +366,8 @@ code {
     });
   </script>
 <h1 id="haruna-chan-blog">Haruna-chan Blog</h1>
-<p>By Yusuke Kato</p>
-<h1 id="2022">2022</h1>
+<p>By <a href="https://yusukekato.github.io/">Yusuke Kato</a></p>
+<h1 id="2022%E5%B9%B4">2022年</h1>
 <h2 id="12%E6%9C%88">12月</h2>
 <ul>
 <li><a href="./harunachan/2022/p1214.html">12/14 : MarkdownをHTMLに変換</a></li>
