--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ pre {
 <header>
 <h1 class="title">Haruna-chan Blog</h1>
 </header>
-<h1 id="haruna-chan-blog">Haruna-chan Blog</h1>
+<h1 id="ハルちゃんブログ">ハルちゃんブログ</h1>
 <p>Author : <a href="https://yusukekato.github.io/">Yusuke Kato</a></p>
 <h1 id="年">2022年</h1>
 <h2 id="月">12月</h2>
