--- a/index.html
+++ b/index.html
@@ -305,9 +305,9 @@ pre {
 <h1 id="年">2022年</h1>
 <h2 id="月">12月</h2>
 <ul>
-<li><a href="./harunachan/2022/p1215.html">12/15 : pandocでHTMLテンプレートを使用</a></li>
-<li><a href="./harunachan/2022/p1214_2.html">12/14 : MarkdownをHTMLに変換（pandoc）</a></li>
-<li><a href="./harunachan/2022/p1214.html">12/14 : MarkdownをHTMLに変換（Markdown PDF）</a></li>
+<li><a href="./log/2022/p1215.html">12/15 : pandocでHTMLテンプレートを使用</a></li>
+<li><a href="./log/2022/p1214_2.html">12/14 : MarkdownをHTMLに変換（pandoc）</a></li>
+<li><a href="./log/2022/p1214.html">12/14 : MarkdownをHTMLに変換（Markdown PDF）</a></li>
 </ul>
   </div>
 </body>
