--- a/index.html
+++ b/index.html
@@ -15,6 +15,17 @@
 </blockquote>
 </header>
 
+<nav id="TOC" role="doc-toc">
+    <strong>Contents</strong><label for="contents">⊕</label>
+  <input type="checkbox" id="contents">
+  <ul>
+  <li><a href="#ハルナちゃんブログ">ハルナちゃんブログ</a></li>
+  <li><a href="#年">2022年</a><ul>
+  <li><a href="#月">12月</a></li>
+  </ul></li>
+  <li><a href="#blog-info.">Blog Info.</a></li>
+  </ul>
+</nav>
 
 <main>
 <h1 id="ハルナちゃんブログ">ハルナちゃんブログ</h1>
@@ -22,6 +33,7 @@
 <h1 id="年">2022年</h1>
 <h2 id="月">12月</h2>
 <ul>
+<li><a href="./log/2022/p1216_3.html">12/16 : pandoc用のMakefile</a></li>
 <li><a href="./log/2022/p1216_2.html">12/16 : pandocでHTMLテンプレートとcssを使用</a></li>
 <li><a href="./log/2022/p1216.html">12/16 : 円周率シェル芸</a></li>
 <li><a href="./log/2022/p1215.html">12/15 : pandocでHTMLテンプレートを使用</a></li>
