--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   <li><a href="#月">12月</a></li>
   </ul></li>
   <li><a href="#blog-info.">Blog Info.</a></li>
+  <li><a href="#github">GitHub</a></li>
   </ul>
 </nav>
 
@@ -42,9 +43,14 @@
 </ul>
 <h1 id="blog-info.">Blog Info.</h1>
 <ul>
-<li><a href="https://jez.io/pandoc-markdown-css-theme/">参考情報</a></li>
-<li><a href="https://github.com/jez/pandoc-markdown-css-theme/blob/master/template.html5">拝借HTMLテンプレート</a></li>
-<li><a href="https://github.com/jez/pandoc-markdown-css-theme/blob/master/public/css/theme.css">拝借css</a></li>
+<li><a href="https://jez.io/pandoc-markdown-css-theme/">pandocの参考情報</a></li>
+<li><a href="https://github.com/jez/pandoc-markdown-css-theme/blob/master/template.html5">拝借したHTMLテンプレート</a></li>
+<li><a href="https://github.com/jez/pandoc-markdown-css-theme/blob/master/public/css/theme.css">拝借したcss</a></li>
+</ul>
+<h1 id="github">GitHub</h1>
+<ul>
+<li><a href="https://github.com/YusukeKato">YusukeKato</a></li>
+<li><a href="https://github.com/YusukeKato/log">LOG</a></li>
 </ul>
 </main>
 
