--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
   <input type="checkbox" id="contents">
   <ul>
   <li><a href="#ハルナちゃんブログ">ハルナちゃんブログ</a></li>
-  <li><a href="#年">2022年</a><ul>
-  <li><a href="#月">12月</a></li>
+  <li><a href="#log">LOG</a><ul>
+  <li><a href="#年12月">2022年12月</a></li>
   </ul></li>
+  <li><a href="#diary">DIARY</a></li>
   <li><a href="#blog-info.">Blog Info.</a></li>
   <li><a href="#github">GitHub</a></li>
   </ul>
@@ -31,8 +32,8 @@
 <main>
 <h1 id="ハルナちゃんブログ">ハルナちゃんブログ</h1>
 <p>Author : <a href="https://yusukekato.github.io/">Yusuke Kato</a></p>
-<h1 id="年">2022年</h1>
-<h2 id="月">12月</h2>
+<h1 id="log">LOG</h1>
+<h2 id="年12月">2022年12月</h2>
 <ul>
 <li><a href="./log/2022/p1216_3.html">12/16 : pandoc用のMakefile</a></li>
 <li><a href="./log/2022/p1216_2.html">12/16 : pandocでHTMLテンプレートとcssを使用</a></li>
@@ -40,6 +41,10 @@
 <li><a href="./log/2022/p1215.html">12/15 : pandocでHTMLテンプレートを使用</a></li>
 <li><a href="./log/2022/p1214_2.html">12/14 : MarkdownをHTMLに変換（pandoc）</a></li>
 <li><a href="./log/2022/p1214.html">12/14 : MarkdownをHTMLに変換（Markdown PDF）</a></li>
+</ul>
+<h1 id="diary">DIARY</h1>
+<ul>
+<li><a href="./log/diary/p202212.html">2022/12</a></li>
 </ul>
 <h1 id="blog-info.">Blog Info.</h1>
 <ul>
