--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
   <li><a href="#log">LOG</a><ul>
   <li><a href="#年12月">2022年12月</a></li>
   </ul></li>
-  <li><a href="#diary">DIARY</a></li>
+  <li><a href="#diary">DIARY</a><ul>
+  <li><a href="#年">2022年</a></li>
+  </ul></li>
   <li><a href="#blog-info.">Blog Info.</a></li>
   <li><a href="#github">GitHub</a></li>
   </ul>
@@ -43,6 +45,7 @@
 <li><a href="./log/2022/p1214.html">12/14 : MarkdownをHTMLに変換（Markdown PDF）</a></li>
 </ul>
 <h1 id="diary">DIARY</h1>
+<h2 id="年">2022年</h2>
 <ul>
 <li><a href="./log/diary/p202212.html">2022/12</a></li>
 </ul>
