--- a/diary/p202212.html
+++ b/diary/p202212.html
@@ -19,7 +19,7 @@
     <strong>Contents</strong><label for="contents">⊕</label>
   <input type="checkbox" id="contents">
   <ul>
-  <li><a href="#diary-202212">Diary 2022/12</a><ul>
+  <li><a href="#年12月">2022年12月</a><ul>
   <li><a href="#日">16日</a></li>
   <li><a href="#日-1">15日</a></li>
   <li><a href="#日-2">14日</a></li>
@@ -36,7 +36,7 @@
 </nav>
 
 <main>
-<h1 id="diary-202212">Diary 2022/12</h1>
+<h1 id="年12月">2022年12月</h1>
 <h2 id="日">16日</h2>
 <ul>
 <li>花札</li>
