--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
 <h1 id="log">LOG</h1>
 <h2 id="年12月">2022年12月</h2>
 <ul>
-<li><a href="./log/2022/p1216_3.html">12/16 : pandoc用のMakefile</a></li>
-<li><a href="./log/2022/p1216_2.html">12/16 : pandocでHTMLテンプレートとcssを使用</a></li>
-<li><a href="./log/2022/p1216.html">12/16 : 円周率シェル芸</a></li>
-<li><a href="./log/2022/p1215.html">12/15 : pandocでHTMLテンプレートを使用</a></li>
-<li><a href="./log/2022/p1214_2.html">12/14 : MarkdownをHTMLに変換（pandoc）</a></li>
-<li><a href="./log/2022/p1214.html">12/14 : MarkdownをHTMLに変換（Markdown PDF）</a></li>
+<li><a href="./log/2022/p1216_4.html">NEORT “Random Sin Wave”</a></li>
+<li><a href="./log/2022/p1216_3.html">Makefile (pandoc)</a></li>
+<li><a href="./log/2022/p1216_2.html">pandoc (HTML Template and css)</a></li>
+<li><a href="./log/2022/p1216.html">円周率シェル芸</a></li>
+<li><a href="./log/2022/p1215.html">pandoc (HTML Template)</a></li>
+<li><a href="./log/2022/p1214_2.html">Markdown to HTML (pandoc)</a></li>
+<li><a href="./log/2022/p1214.html">Markdown to HTML (Markdown PDF)</a></li>
 </ul>
 <h1 id="diary">DIARY</h1>
 <h2 id="年">2022年</h2>
@@ -51,9 +52,9 @@
 </ul>
 <h1 id="blog-info.">Blog Info.</h1>
 <ul>
-<li><a href="https://jez.io/pandoc-markdown-css-theme/">pandocの参考情報</a></li>
-<li><a href="https://github.com/jez/pandoc-markdown-css-theme/blob/master/template.html5">拝借したHTMLテンプレート</a></li>
-<li><a href="https://github.com/jez/pandoc-markdown-css-theme/blob/master/public/css/theme.css">拝借したcss</a></li>
+<li><a href="https://jez.io/pandoc-markdown-css-theme/">pandoc info.</a></li>
+<li><a href="https://github.com/jez/pandoc-markdown-css-theme/blob/master/template.html5">HTML Template</a></li>
+<li><a href="https://github.com/jez/pandoc-markdown-css-theme/blob/master/public/css/theme.css">css</a></li>
 </ul>
 <h1 id="github">GitHub</h1>
 <ul>
