--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 <h1 id="blog-info.">Blog Info.</h1>
 <ul>
 <li><a href="https://jez.io/pandoc-markdown-css-theme/">pandoc info.</a></li>
-<li><a href="https://github.com/jez/pandoc-markdown-css-theme/blob/master/template.html5">HTML Template</a></li>
-<li><a href="https://github.com/jez/pandoc-markdown-css-theme/blob/master/public/css/theme.css">css</a></li>
+<li><a href="https://github.com/jez/pandoc-markdown-css-theme/blob/master/template.html5">template.html5</a></li>
+<li><a href="https://github.com/jez/pandoc-markdown-css-theme/blob/master/public/css/theme.css">theme.css</a></li>
 </ul>
 <h1 id="github">GitHub</h1>
 <ul>
