--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
 <h1 id="log">LOG</h1>
 <h2 id="年12月">2022年12月</h2>
 <ul>
+<li><a href="./log/2022/p1221_2.html">文字列前進シェル芸</a></li>
+<li><a href="./log/2022/p1221.html">文字列回転シェル芸</a></li>
 <li><a href="./log/2022/p1217_2.html">四角回転シェル芸</a></li>
 <li><a href="./log/2022/p1217.html">languages.yml</a></li>
 <li><a href="./log/2022/p1216_4.html">NEORT “Random Sin Wave”</a></li>
