--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 </ul>
 <h1 id="blog-info.">Blog Info.</h1>
 <ul>
+<li><a href="./log/update.html">Blog Update</a></li>
 <li><a href="https://jez.io/pandoc-markdown-css-theme/">pandoc info.</a></li>
 <li><a href="https://github.com/jez/pandoc-markdown-css-theme/blob/master/template.html5">template.html5</a></li>
 <li><a href="https://github.com/jez/pandoc-markdown-css-theme/blob/master/public/css/theme.css">theme.css</a></li>
