update from new pc

--- a/index.html
+++ b/index.html
@@ -20,13 +20,16 @@
   <input type="checkbox" id="contents">
   <ul>
   <li><a href="#ハルナちゃんブログ">ハルナちゃんブログ</a></li>
-  <li><a href="#log">LOG</a><ul>
+  <li><a href="#log">LOG</a>
+  <ul>
   <li><a href="#年12月">2022年12月</a></li>
   </ul></li>
-  <li><a href="#diary">DIARY</a><ul>
+  <li><a href="#diary">DIARY</a>
+  <ul>
   <li><a href="#年">2022年</a></li>
   </ul></li>
   <li><a href="#blog-info.">Blog Info.</a></li>
+  <li><a href="#new-pc">New PC</a></li>
   <li><a href="#github">GitHub</a></li>
   </ul>
 </nav>
@@ -63,6 +66,10 @@
 <li><a href="https://jez.io/pandoc-markdown-css-theme/">pandoc info.</a></li>
 <li><a href="https://github.com/jez/pandoc-markdown-css-theme/blob/master/template.html5">template.html5</a></li>
 <li><a href="https://github.com/jez/pandoc-markdown-css-theme/blob/master/public/css/theme.css">theme.css</a></li>
+</ul>
+<h1 id="new-pc">New PC</h1>
+<ul>
+<li><a href="./log/new_pc.html">New PC Info.</a></li>
 </ul>
 <h1 id="github">GitHub</h1>
 <ul>
