--- a/diary/p202212.html
+++ b/diary/p202212.html
@@ -19,26 +19,33 @@
     <strong>Contents</strong><label for="contents">⊕</label>
   <input type="checkbox" id="contents">
   <ul>
-  <li><a href="#年12月">2022年12月</a><ul>
-  <li><a href="#日">25日</a></li>
-  <li><a href="#日-1">24日</a></li>
-  <li><a href="#日-2">23日</a></li>
-  <li><a href="#日-3">22日</a></li>
-  <li><a href="#日-4">21日</a></li>
-  <li><a href="#日-5">20日</a></li>
-  <li><a href="#日-6">19日</a></li>
-  <li><a href="#日-7">18日</a></li>
-  <li><a href="#日-8">17日</a></li>
-  <li><a href="#日-9">16日</a></li>
-  <li><a href="#日-10">15日</a></li>
-  <li><a href="#日-11">14日</a></li>
-  <li><a href="#日-12">13日</a></li>
-  <li><a href="#日-13">12日</a></li>
-  <li><a href="#日-14">11日</a></li>
-  <li><a href="#日-15">10日</a></li>
-  <li><a href="#日-16">9日</a></li>
-  <li><a href="#日-17">8日</a></li>
-  <li><a href="#日-18">7日</a></li>
+  <li><a href="#年12月">2022年12月</a>
+  <ul>
+  <li><a href="#日">31日</a></li>
+  <li><a href="#日-1">30日</a></li>
+  <li><a href="#日-2">29日</a></li>
+  <li><a href="#日-3">28日</a></li>
+  <li><a href="#日-4">27日</a></li>
+  <li><a href="#日-5">26日</a></li>
+  <li><a href="#日-6">25日</a></li>
+  <li><a href="#日-7">24日</a></li>
+  <li><a href="#日-8">23日</a></li>
+  <li><a href="#日-9">22日</a></li>
+  <li><a href="#日-10">21日</a></li>
+  <li><a href="#日-11">20日</a></li>
+  <li><a href="#日-12">19日</a></li>
+  <li><a href="#日-13">18日</a></li>
+  <li><a href="#日-14">17日</a></li>
+  <li><a href="#日-15">16日</a></li>
+  <li><a href="#日-16">15日</a></li>
+  <li><a href="#日-17">14日</a></li>
+  <li><a href="#日-18">13日</a></li>
+  <li><a href="#日-19">12日</a></li>
+  <li><a href="#日-20">11日</a></li>
+  <li><a href="#日-21">10日</a></li>
+  <li><a href="#日-22">9日</a></li>
+  <li><a href="#日-23">8日</a></li>
+  <li><a href="#日-24">7日</a></li>
   </ul></li>
   <li><a href="#ホームへ">ホームへ</a></li>
   </ul>
@@ -46,89 +53,114 @@
 
 <main>
 <h1 id="年12月">2022年12月</h1>
-<h2 id="日">25日</h2>
+<h2 id="日">31日</h2>
+<ul>
+<li>すき焼き</li>
+<li>パソコン修理完了</li>
+</ul>
+<h2 id="日-1">30日</h2>
+<ul>
+<li>シェル芸AtCoder記事を執筆</li>
+</ul>
+<h2 id="日-2">29日</h2>
+<ul>
+<li>二次創作</li>
+</ul>
+<h2 id="日-3">28日</h2>
+<ul>
+<li>似顔絵</li>
+</ul>
+<h2 id="日-4">27日</h2>
+<ul>
+<li>今年最後のアルバイト</li>
+</ul>
+<h2 id="日-5">26日</h2>
+<ul>
+<li>パソコン修理</li>
+</ul>
+<h2 id="日-6">25日</h2>
 <ul>
 <li>部屋大掃除</li>
 </ul>
-<h2 id="日-1">24日</h2>
+<h2 id="日-7">24日</h2>
 <ul>
 <li>LINEスタンプ交換</li>
 </ul>
-<h2 id="日-2">23日</h2>
+<h2 id="日-8">23日</h2>
 <ul>
 <li>シェル芸の非公式WIKI</li>
 </ul>
-<h2 id="日-3">22日</h2>
+<h2 id="日-9">22日</h2>
 <ul>
 <li>アルバイト</li>
 </ul>
-<h2 id="日-4">21日</h2>
+<h2 id="日-10">21日</h2>
 <ul>
 <li>図書館</li>
 <li>マルクス・ガブリエル</li>
 </ul>
-<h2 id="日-5">20日</h2>
+<h2 id="日-11">20日</h2>
 <ul>
 <li>アルバイト</li>
 <li>クリスマスプレゼント到着（シュレッダー）</li>
 </ul>
-<h2 id="日-6">19日</h2>
+<h2 id="日-12">19日</h2>
 <ul>
 <li>病院</li>
 <li>ブルーバックスの科学手帳を購入</li>
 <li>クリスマスプレゼント到着（ノート）</li>
 </ul>
-<h2 id="日-7">18日</h2>
+<h2 id="日-13">18日</h2>
 <ul>
 <li>副反応</li>
 </ul>
-<h2 id="日-8">17日</h2>
+<h2 id="日-14">17日</h2>
 <ul>
 <li>副反応</li>
 </ul>
-<h2 id="日-9">16日</h2>
+<h2 id="日-15">16日</h2>
 <ul>
 <li>花札</li>
 <li>コロナワクチン</li>
 </ul>
-<h2 id="日-10">15日</h2>
+<h2 id="日-16">15日</h2>
 <ul>
 <li>アルバイト</li>
 </ul>
-<h2 id="日-11">14日</h2>
+<h2 id="日-17">14日</h2>
 <ul>
 <li>ドメインはharunachan.comに決定</li>
 <li>レンタルサーバーGitHub設定</li>
 </ul>
-<h2 id="日-12">13日</h2>
+<h2 id="日-18">13日</h2>
 <ul>
 <li>アルバイト</li>
 </ul>
-<h2 id="日-13">12日</h2>
+<h2 id="日-19">12日</h2>
 <ul>
 <li>上野オフ会</li>
 </ul>
-<h2 id="日-14">11日</h2>
+<h2 id="日-20">11日</h2>
 <ul>
 <li>上野オフ会</li>
 </ul>
-<h2 id="日-15">10日</h2>
+<h2 id="日-21">10日</h2>
 <ul>
 <li>p5.js</li>
 <li>NEORT登録(Twitter : y_kato222)</li>
 </ul>
-<h2 id="日-16">9日</h2>
+<h2 id="日-22">9日</h2>
 <ul>
 <li>病院</li>
 <li>美容院</li>
 </ul>
-<h2 id="日-17">8日</h2>
+<h2 id="日-23">8日</h2>
 <ul>
 <li>Diaryリポジトリーを作成</li>
 <li>GitHub Pagesで公開</li>
 <li>ポートフォリオ作成の続き</li>
 </ul>
-<h2 id="日-18">7日</h2>
+<h2 id="日-24">7日</h2>
 <ul>
 <li>GitHub Pagesでウェブサイト作成</li>
 <li>yusukekato.netドメインを取得</li>
