--- a/new_pc.html
+++ b/new_pc.html
@@ -1,3 +1,5 @@
+<!-- https://github.com/jez/pandoc-markdown-css-theme/blob/master/template.html5 -->
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="" xml:lang="">
 <head>
@@ -24,6 +26,7 @@
   <li><a href="#絶対に必要">絶対に必要</a></li>
   <li><a href="#あればうれしい">あればうれしい</a></li>
   </ul></li>
+  <li><a href="#参考情報">参考情報</a></li>
   <li><a href="#ホームへ">ホームへ</a></li>
   </ul>
 </nav>
@@ -36,6 +39,7 @@
 <li>Google Chrome : ログインして同期</li>
 <li>WSL2 : Ubuntuインストール</li>
 <li>GitHub : sshでアクセスできるように設定</li>
+<li>レンタルサーバー : ~/.ssh/configで設定</li>
 </ul>
 <pre><code>sudo apt update
 sudo apt upgrade
@@ -44,6 +48,11 @@ sudo apt install make</code></pre>
 <h2 id="あればうれしい">あればうれしい</h2>
 <ul>
 <li>LaTeX : 小説執筆用</li>
+</ul>
+<h1 id="参考情報">参考情報</h1>
+<ul>
+<li><a href="https://highfivecreate.com/blog/tips/4943.html">参考記事1</a></li>
+<li><a href="https://zenn.dev/wsuzume/articles/26b26106c3925e">参考記事2</a></li>
 </ul>
 <h1 id="ホームへ">ホームへ</h1>
 <p><a href="https://harunachan.com/">ホームへ</a></p>
