--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 <h1 id="new-pc">New PC</h1>
 <ul>
 <li><a href="./log/new_pc.html">New PC Info.</a></li>
+<li><a href="./log/latex.html">LaTeX Info.</a></li>
 </ul>
 <h1 id="github">GitHub</h1>
 <ul>
