--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
   </ul></li>
   <li><a href="#diary">DIARY</a>
   <ul>
-  <li><a href="#年">2022年</a></li>
+  <li><a href="#年">2023年</a></li>
+  <li><a href="#年-1">2022年</a></li>
   </ul></li>
   <li><a href="#blog-info.">Blog Info.</a></li>
   <li><a href="#new-pc">New PC</a></li>
@@ -58,7 +59,11 @@
 <li><a href="./log/2022/p1214.html">Markdown to HTML (Markdown PDF)</a></li>
 </ul>
 <h1 id="diary">DIARY</h1>
-<h2 id="年">2022年</h2>
+<h2 id="年">2023年</h2>
+<ul>
+<li><a href="./log/diary/p202301.html">2023/01</a></li>
+</ul>
+<h2 id="年-1">2022年</h2>
 <ul>
 <li><a href="./log/diary/p202212.html">2022/12</a></li>
 </ul>
