--- a/latex.html
+++ b/latex.html
@@ -24,6 +24,7 @@
   <li><a href="#wsl2のubuntuにlatexをインストール">WSL2のUbuntuにLaTeXをインストール</a></li>
   <li><a href="#コンパイル">コンパイル</a></li>
   <li><a href="#フォントの埋め込み">フォントの埋め込み</a></li>
+  <li><a href="#フォント指定">フォント指定</a></li>
   <li><a href="#参考情報">参考情報</a></li>
   <li><a href="#ホームへ">ホームへ</a></li>
   </ul>
@@ -39,6 +40,8 @@
 dvipdfmx test.dvi</code></pre>
 <h1 id="フォントの埋め込み">フォントの埋め込み</h1>
 <pre><code>sudo kanji-config-updmap-sys ipa</code></pre>
+<h1 id="フォント指定">フォント指定</h1>
+<p><a href="https://qiita.com/zr_tex8r/items/15ec2848371ec19d45ed">フォント指定方法</a></p>
 <h1 id="参考情報">参考情報</h1>
 <ul>
 <li><a href="https://www.aise.ics.saitama-u.ac.jp/~gotoh/Ubuntu2004JPonWSL2.html">参考記事1</a></li>
