--- a/diary/p202301.html
+++ b/diary/p202301.html
@@ -23,23 +23,37 @@
   <ul>
   <li><a href="#年1月">2023年1月</a>
   <ul>
-  <li><a href="#日">17日</a></li>
-  <li><a href="#日-1">16日</a></li>
-  <li><a href="#日-2">15日</a></li>
-  <li><a href="#日-3">14日</a></li>
-  <li><a href="#日-4">13日</a></li>
-  <li><a href="#日-5">12日</a></li>
-  <li><a href="#日-6">11日</a></li>
-  <li><a href="#日-7">10日</a></li>
-  <li><a href="#日-8">9日</a></li>
-  <li><a href="#日-9">8日</a></li>
-  <li><a href="#日-10">7日</a></li>
-  <li><a href="#日-11">6日</a></li>
-  <li><a href="#日-12">5日</a></li>
-  <li><a href="#日-13">4日</a></li>
-  <li><a href="#日-14">3日</a></li>
-  <li><a href="#日-15">2日</a></li>
-  <li><a href="#日-16">1日</a></li>
+  <li><a href="#日">31日</a></li>
+  <li><a href="#日-1">30日</a></li>
+  <li><a href="#日-2">29日</a></li>
+  <li><a href="#日-3">28日</a></li>
+  <li><a href="#日-4">27日</a></li>
+  <li><a href="#日-5">26日</a></li>
+  <li><a href="#日-6">25日</a></li>
+  <li><a href="#日-7">24日</a></li>
+  <li><a href="#日-8">23日</a></li>
+  <li><a href="#日-9">22日</a></li>
+  <li><a href="#日-10">21日</a></li>
+  <li><a href="#日-11">20日</a></li>
+  <li><a href="#日-12">19日</a></li>
+  <li><a href="#日-13">18日</a></li>
+  <li><a href="#日-14">17日</a></li>
+  <li><a href="#日-15">16日</a></li>
+  <li><a href="#日-16">15日</a></li>
+  <li><a href="#日-17">14日</a></li>
+  <li><a href="#日-18">13日</a></li>
+  <li><a href="#日-19">12日</a></li>
+  <li><a href="#日-20">11日</a></li>
+  <li><a href="#日-21">10日</a></li>
+  <li><a href="#日-22">9日</a></li>
+  <li><a href="#日-23">8日</a></li>
+  <li><a href="#日-24">7日</a></li>
+  <li><a href="#日-25">6日</a></li>
+  <li><a href="#日-26">5日</a></li>
+  <li><a href="#日-27">4日</a></li>
+  <li><a href="#日-28">3日</a></li>
+  <li><a href="#日-29">2日</a></li>
+  <li><a href="#日-30">1日</a></li>
   </ul></li>
   <li><a href="#ホームへ">ホームへ</a></li>
   </ul>
@@ -47,79 +61,137 @@
 
 <main>
 <h1 id="年1月">2023年1月</h1>
-<h2 id="日">17日</h2>
+<h2 id="日">31日</h2>
+<ul>
+<li>アルバイト</li>
+<li>色々と記録は残すように</li>
+</ul>
+<h2 id="日-1">30日</h2>
+<ul>
+<li>メルさんの写真整理</li>
+</ul>
+<h2 id="日-2">29日</h2>
+<ul>
+<li>メルさんの写真整理</li>
+</ul>
+<h2 id="日-3">28日</h2>
+<ul>
+<li>メルさんの写真整理</li>
+</ul>
+<h2 id="日-4">27日</h2>
+<ul>
+<li>メルさんの火葬</li>
+</ul>
+<h2 id="日-5">26日</h2>
+<ul>
+<li>メルさんの命日</li>
+</ul>
+<h2 id="日-6">25日</h2>
 <ul>
 <li>アルバイト</li>
 </ul>
-<h2 id="日-1">16日</h2>
+<h2 id="日-7">24日</h2>
+<ul>
+<li>ブログ整理</li>
+</ul>
+<h2 id="日-8">23日</h2>
+<ul>
+<li>手紙</li>
+<li>刺繍</li>
+</ul>
+<h2 id="日-9">22日</h2>
+<ul>
+<li>ブログ</li>
+</ul>
+<h2 id="日-10">21日</h2>
+<ul>
+<li>虚構推理</li>
+</ul>
+<h2 id="日-11">20日</h2>
+<ul>
+<li>2000円男の話</li>
+</ul>
+<h2 id="日-12">19日</h2>
+<ul>
+<li>アルバイト</li>
+</ul>
+<h2 id="日-13">18日</h2>
+<ul>
+<li>アルバイト</li>
+</ul>
+<h2 id="日-14">17日</h2>
+<ul>
+<li>アルバイト</li>
+</ul>
+<h2 id="日-15">16日</h2>
 <ul>
 <li>Zenn第2章</li>
 </ul>
-<h2 id="日-2">15日</h2>
+<h2 id="日-16">15日</h2>
 <ul>
 <li>Zenn第1章</li>
 </ul>
-<h2 id="日-3">14日</h2>
+<h2 id="日-17">14日</h2>
 <ul>
 <li>FGO</li>
 <li>Sky</li>
 </ul>
-<h2 id="日-4">13日</h2>
+<h2 id="日-18">13日</h2>
 <ul>
 <li>手紙を投函</li>
 <li>図書館</li>
 <li>病院なし</li>
 </ul>
-<h2 id="日-5">12日</h2>
+<h2 id="日-19">12日</h2>
 <ul>
 <li>アルバイト</li>
 <li>スペース</li>
 </ul>
-<h2 id="日-6">11日</h2>
+<h2 id="日-20">11日</h2>
 <ul>
 <li>アルバイト</li>
 <li>Twitter Blue</li>
 </ul>
-<h2 id="日-7">10日</h2>
+<h2 id="日-21">10日</h2>
 <ul>
 <li>アルバイト</li>
 </ul>
-<h2 id="日-8">9日</h2>
+<h2 id="日-22">9日</h2>
 <ul>
 <li>仲直り</li>
 <li>年賀状大喜利</li>
 </ul>
-<h2 id="日-9">8日</h2>
+<h2 id="日-23">8日</h2>
 <ul>
 <li>マラソン</li>
 </ul>
-<h2 id="日-10">7日</h2>
+<h2 id="日-24">7日</h2>
 <ul>
 <li>にじさんじ麻雀杯</li>
 <li>Qiita : 競プロシェル芸記事</li>
 </ul>
-<h2 id="日-11">6日</h2>
+<h2 id="日-25">6日</h2>
 <ul>
 <li>病院</li>
 <li>マルクス・ガブリエル</li>
 </ul>
-<h2 id="日-12">5日</h2>
+<h2 id="日-26">5日</h2>
 <ul>
 <li>アルバイト</li>
 </ul>
-<h2 id="日-13">4日</h2>
+<h2 id="日-27">4日</h2>
 <ul>
 <li>AWS Amplifyでウェブアプリ作成</li>
 </ul>
-<h2 id="日-14">3日</h2>
+<h2 id="日-28">3日</h2>
 <ul>
 <li>AWS Amplifyの勉強</li>
 </ul>
-<h2 id="日-15">2日</h2>
+<h2 id="日-29">2日</h2>
 <ul>
 <li>AWS Amplifyの勉強</li>
 </ul>
-<h2 id="日-16">1日</h2>
+<h2 id="日-30">1日</h2>
 <ul>
 <li>新年</li>
 <li>Qiitaに投稿</li>
