--- a/diary/p202302.html
+++ b/diary/p202302.html
@@ -23,25 +23,34 @@
   <ul>
   <li><a href="#年2月">2023年2月</a>
   <ul>
-  <li><a href="#日">19日</a></li>
-  <li><a href="#日-1">18日</a></li>
-  <li><a href="#日-2">17日</a></li>
-  <li><a href="#日-3">16日</a></li>
-  <li><a href="#日-4">15日</a></li>
-  <li><a href="#日-5">14日</a></li>
-  <li><a href="#日-6">13日</a></li>
-  <li><a href="#日-7">12日</a></li>
-  <li><a href="#日-8">11日</a></li>
-  <li><a href="#日-9">10日</a></li>
-  <li><a href="#日-10">9日</a></li>
-  <li><a href="#日-11">8日</a></li>
-  <li><a href="#日-12">7日</a></li>
-  <li><a href="#日-13">6日</a></li>
-  <li><a href="#日-14">5日</a></li>
-  <li><a href="#日-15">4日</a></li>
-  <li><a href="#日-16">3日</a></li>
-  <li><a href="#日-17">2日</a></li>
-  <li><a href="#日-18">1日</a></li>
+  <li><a href="#日">28日</a></li>
+  <li><a href="#日-1">27日</a></li>
+  <li><a href="#日-2">26日</a></li>
+  <li><a href="#日-3">25日</a></li>
+  <li><a href="#日-4">24日</a></li>
+  <li><a href="#日-5">23日</a></li>
+  <li><a href="#日-6">22日</a></li>
+  <li><a href="#日-7">21日</a></li>
+  <li><a href="#日-8">20日</a></li>
+  <li><a href="#日-9">19日</a></li>
+  <li><a href="#日-10">18日</a></li>
+  <li><a href="#日-11">17日</a></li>
+  <li><a href="#日-12">16日</a></li>
+  <li><a href="#日-13">15日</a></li>
+  <li><a href="#日-14">14日</a></li>
+  <li><a href="#日-15">13日</a></li>
+  <li><a href="#日-16">12日</a></li>
+  <li><a href="#日-17">11日</a></li>
+  <li><a href="#日-18">10日</a></li>
+  <li><a href="#日-19">9日</a></li>
+  <li><a href="#日-20">8日</a></li>
+  <li><a href="#日-21">7日</a></li>
+  <li><a href="#日-22">6日</a></li>
+  <li><a href="#日-23">5日</a></li>
+  <li><a href="#日-24">4日</a></li>
+  <li><a href="#日-25">3日</a></li>
+  <li><a href="#日-26">2日</a></li>
+  <li><a href="#日-27">1日</a></li>
   </ul></li>
   <li><a href="#ホームへ">ホームへ</a></li>
   </ul>
@@ -49,83 +58,119 @@
 
 <main>
 <h1 id="年2月">2023年2月</h1>
-<h2 id="日">19日</h2>
+<h2 id="日">28日</h2>
+<ul>
+<li>就活準備</li>
+</ul>
+<h2 id="日-1">27日</h2>
+<ul>
+<li>宝石の国99話まで</li>
+</ul>
+<h2 id="日-2">26日</h2>
+<ul>
+<li>シェル芸勉強会のブログ記事</li>
+</ul>
+<h2 id="日-3">25日</h2>
+<ul>
+<li>シェル芸勉強会63</li>
+</ul>
+<h2 id="日-4">24日</h2>
+<ul>
+<li>病院</li>
+</ul>
+<h2 id="日-5">23日</h2>
+<ul>
+<li>アルバイト</li>
+</ul>
+<h2 id="日-6">22日</h2>
+<ul>
+<li>アルバイト</li>
+</ul>
+<h2 id="日-7">21日</h2>
+<ul>
+<li>アルバイト</li>
+</ul>
+<h2 id="日-8">20日</h2>
+<ul>
+<li>次の旅行予定計画</li>
+</ul>
+<h2 id="日-9">19日</h2>
 <ul>
 <li>福岡旅行</li>
 <li>動植物園</li>
 </ul>
-<h2 id="日-1">18日</h2>
+<h2 id="日-10">18日</h2>
 <ul>
 <li>福岡旅行</li>
 <li>チームラボフォレスト</li>
 </ul>
-<h2 id="日-2">17日</h2>
+<h2 id="日-11">17日</h2>
 <ul>
 <li>福岡旅行</li>
 <li>水族館</li>
 </ul>
-<h2 id="日-3">16日</h2>
+<h2 id="日-12">16日</h2>
 <ul>
 <li>アルバイト</li>
 </ul>
-<h2 id="日-4">15日</h2>
+<h2 id="日-13">15日</h2>
 <ul>
 <li>アルバイト</li>
 </ul>
-<h2 id="日-5">14日</h2>
+<h2 id="日-14">14日</h2>
 <ul>
 <li>アルバイト</li>
 </ul>
-<h2 id="日-6">13日</h2>
+<h2 id="日-15">13日</h2>
 <ul>
 <li>旅行準備</li>
 </ul>
-<h2 id="日-7">12日</h2>
+<h2 id="日-16">12日</h2>
 <ul>
 <li>図書館</li>
 <li>旅行準備</li>
 </ul>
-<h2 id="日-8">11日</h2>
+<h2 id="日-17">11日</h2>
 <ul>
 <li>ピーナッツ屋さん</li>
 </ul>
-<h2 id="日-9">10日</h2>
+<h2 id="日-18">10日</h2>
 <ul>
 <li>散髪</li>
 </ul>
-<h2 id="日-10">9日</h2>
+<h2 id="日-19">9日</h2>
 <ul>
 <li>SNS作成</li>
 </ul>
-<h2 id="日-11">8日</h2>
+<h2 id="日-20">8日</h2>
 <ul>
 <li>SNS作成</li>
 </ul>
-<h2 id="日-12">7日</h2>
+<h2 id="日-21">7日</h2>
 <ul>
 <li>SNS作成</li>
 </ul>
-<h2 id="日-13">6日</h2>
+<h2 id="日-22">6日</h2>
 <ul>
 <li>散髪予約</li>
 </ul>
-<h2 id="日-14">5日</h2>
+<h2 id="日-23">5日</h2>
 <ul>
 <li>SNS作成</li>
 </ul>
-<h2 id="日-15">4日</h2>
+<h2 id="日-24">4日</h2>
 <ul>
 <li>SNS作成</li>
 </ul>
-<h2 id="日-16">3日</h2>
+<h2 id="日-25">3日</h2>
 <ul>
 <li>同姓同名の話</li>
 </ul>
-<h2 id="日-17">2日</h2>
+<h2 id="日-26">2日</h2>
 <ul>
 <li>アルバイト</li>
 </ul>
-<h2 id="日-18">1日</h2>
+<h2 id="日-27">1日</h2>
 <ul>
 <li>話が雑とのこと</li>
 <li>手紙</li>
