--- a/index.html
+++ b/index.html
@@ -81,6 +81,7 @@
 <h1 id="diary">DIARY</h1>
 <h2 id="年">2023年</h2>
 <ul>
+<li><a href="./log/diary/p202303.html">2023/03</a></li>
 <li><a href="./log/diary/p202302.html">2023/02</a></li>
 <li><a href="./log/diary/p202301.html">2023/01</a></li>
 </ul>
