--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <main>
 <h1 id="ハルナちゃんブログ">ハルナちゃんブログ</h1>
-<p>Author : <a href="https://yusukekato.github.io/">Yusuke Kato</a></p>
+<p>管理人 : <a href="https://yusukekato.github.io/">Yusuke Kato</a></p>
 <h1 id="log">LOG</h1>
 <h2 id="年10月">2023年10月</h2>
 <ul>
@@ -106,6 +106,7 @@
 <h1 id="diary">DIARY</h1>
 <h2 id="年">2023年</h2>
 <ul>
+<li><a href="./log/diary/p202310.html">2023/10</a></li>
 <li><a href="./log/diary/p202304.html">2023/04</a></li>
 <li><a href="./log/diary/p202303.html">2023/03</a></li>
 <li><a href="./log/diary/p202302.html">2023/02</a></li>
