--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <input type="checkbox" id="contents">
   <ul>
   <li><a href="#ハルナちゃんブログ">ハルナちゃんブログ</a></li>
+  <li><a href="#目的">目的</a></li>
   <li><a href="#log">LOG</a>
   <ul>
   <li><a href="#年10月">2023年10月</a></li>
@@ -48,6 +49,8 @@
 <main>
 <h1 id="ハルナちゃんブログ">ハルナちゃんブログ</h1>
 <p>管理人 : <a href="https://yusukekato.github.io/">Yusuke Kato</a></p>
+<h1 id="目的">目的</h1>
+<p>ハルちゃんを笑顔にすること</p>
 <h1 id="log">LOG</h1>
 <h2 id="年10月">2023年10月</h2>
 <ul>
